fixed issue with new tinymce image modal, where reopened image would get stretched

--- a/templates-admin/styles/main.css
+++ b/templates-admin/styles/main.css
@@ -49,7 +49,7 @@ body {
 		width:96%;
 		min-width: 300px; 
 	}
-	body.modal .container img{ width:95%; }
+
 
 a {
 	font-family: "Helvetica Neue", Arial, sans-serif; 
